phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-14 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * themes/*/css/theme_right.css.php, css/phpmyadmin.css.php:
      bug #1342683 Wrong URL to error.ico
    * libraries/tooltip.js::pmaTooltip():
      - no return value (not always returns a value)
      - additional check
      - undefined variable docY

2005-11-13 Michal Čihař  <michal@cihar.com>
    * Documentation.html, config.default.php, main.php, server_links.inc.php,
      server_variables.php, server_status.php: Drop $cfg['ShowMysqlInfo'] and
      $cfg['ShowMysqlVars'] and show info in all cases. Drop $is_superuser
      condition from showing php info.
    * lang/czech: Small improvements.

2005-11-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * db_details_structure.php: wrong js function call
    * libraries/functions.js
      - removed deprecated function setCheckboxesRange()
      - rewrote setCheckboxes()
      libraries/server_privilegs.js
      - removed setCheckboxes()
      header.inc.php: include functions.js for server_privilegs.php
      server_privilegs.php
      - bug #1353437 Table/Column privileges brokeness new in HEAD
      - fixed proper display fo yes/no for column/table specific rights
      - fixed row selection
      - make use of javascript:un/markAllRows()
      - adapted layout like db, table and row lists
    * lang/german: fixed translation

2005-11-11 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.
    * lang/finnish: update, thanks to Jouni Kahkonen

2005-11-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/session.inc.php, Documentation.html: bug #1352479, warn
      if PHP does not support session
    * server_privileges.php: bug #1353435, selecting users to drop is broken
      and bug #1353437, undefined index while editing a user

2005-11-10 Michal Čihař  <michal@cihar.com>