@@ -12,6 +12,8 @@ $Source$
       - no return value (not always returns a value)
       - additional check
       - undefined variable docY
+    * header.inc.php
+      - added class icon
 
 2005-11-13 Michal Čihař  <michal@cihar.com>
     * Documentation.html, config.default.php, main.php, server_links.inc.php,
